tests/errors/ref_self_via_deque_get_return.ptt
use std/deque

Counter is {
  value int
}

Counter.bump(self ref Counter) {
  self.value be self.value + 1
}

touch(d Deque of Counter) {
  d.get(0).bump()
}

spark {
  d is Deque of Counter()
  d.push_back(Counter(value is 0))
  touch(d)
  yell(d.get(0).value)
}
